--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="智能体质膳食推荐系统 - 基于中医体质理论的个性化饮食推荐">
     <title>智膳 - 智能体质膳食推荐系统</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico">
 </head>
 
 <body>
